--- a/css/card.css
+++ b/css/card.css
@@ -14,6 +14,9 @@
   border: 0;
   box-shadow: none;
 }
+.nuCourseCard{
+  background-color: var(--white);
+}
 
 @media screen and (min-width: 768px) {
   .card {
