--- a/css/course.css
+++ b/css/course.css
@@ -1,47 +1,85 @@
 @import "./variables.css";
-
 .course-intro h1{
     color: var(--green);
 }
+.course-intro h1 span{
+    border-bottom: 1px solid var(--green);
+    padding-bottom: 0.5rem;
+
+}
+
+.nuCourseCard .course-info .course-title{
+    color: var(--green);
+    
+    
+}
 .course-intro p{
     font-size: 1rem;
+    text-align: center;
 }
-.section .course-info span{
-    color: var(--green);
+.section .course-info .coursetext p{
+    color: black;
+    text-align: start;
+    font-size: 0.8rem;
+    padding: 1rem;
+}
+.nuCourseCard .course-info .course-price{
+    background-color: var(--green)
+}
+
+.nuCourseCard .course-info .course-price .c-price{
+    color: var(--white);
+    background: var(--green);
+    padding: 0.5rem 1.5rem;
     font-weight: bold;
 }
-.highlights{
-    background: #f4f4f4;
-    padding: 3rem 1rem;
-}
-.highlights h2{
-    color: var(--green);
-    text-align: center;
-    padding-bottom: 2rem;
-}
-.hightlightlist{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    
+
+
+.nuCourseCard .course-info .course-price .link{
+    background-color: var(--lemon-green);
+
+
     align-items: center;
 }
-.hightlightlist > div > ul > li{
-    padding: 0.8rem 0.4rem;
-    font-style: italic;
-    font-size: 1rem; 
+.nuCourseCard .course-info .course-price .link a{
+    color: var(--white);
+    padding: 0.5rem 2.5rem;
+    font-weight: bold;
 }
-.hightlightlist1{
-    margin-bottom: 1rem;
+
+
+.faq{
+    background: rgba(144, 238, 144, 0.87);
+    
+    padding: 3rem
+
+}
+.faq h1{
+    color: var(--green);
+    padding-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    text-align: center;
+    justify-content: center;
+    word-spacing: 5px
+    
+}
+.footer-container p a{
+    color: white;
 }
 
 
 
 @media(min-width:768px){
-    .hightlightlist{
-        flex-direction: row;
-    }
-    .hightlightlist > div{
-        margin: 0 0.5rem;
+    
+    
+    .faq{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
     }
 
     .footer-container{
