--- a/css/variables.css
+++ b/css/variables.css
@@ -2,6 +2,7 @@
   --green: #0D5E4C;
   --white: #ffffff;
   --grey: #F9F9F9;
+  --gray: #f4f4f4;
   --light-green: #C6F2CD;
   --cream: #FFFFF6;
   --lemon-green: #56DA6D;
