--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,20 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  position: fixed;
+  height: 100%;
+  overflow: hidden;
+}
 body {
   font-family: "Montserrat", sans-serif;
   line-height: 1.5;
   font-size: 16px;
+  width: 100vw; 
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 .res-pad {
   padding: 0.5rem;
